# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: test.yml
migrations/: 20211127045956_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: add_user.rs  health_check.rs
tests/common/: mod.rs
